crates/squealy/tests/compile_fail/view_is_not_a_cte.stderr
error[E0277]: the trait bound `ActiveUserView<'_>: CteDefinition` is not satisfied
  --> tests/compile_fail/view_is_not_a_cte.rs:40:36
   |
40 |     let _ = cte_definition_model::<ActiveUserView>();
   |                                    ^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `CteDefinition` is not implemented for `ActiveUserView<'_>`
  --> tests/compile_fail/view_is_not_a_cte.rs:25:1
   |
25 | struct ActiveUserView<'scope, C: ColumnMode = ColumnExpr> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `squealy::cte_definition_model`
  --> $WORKSPACE/crates/squealy-core/src/cte.rs
   |
   | pub fn cte_definition_model<T>() -> ViewQueryModel
   |        -------------------- required by a bound in this function
   | where
   |     T: CteDefinition,
   |        ^^^^^^^^^^^^^ required by this bound in `cte_definition_model`
